--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./normalize.css" />
-    <title>Vocallence</title>
+    <title>VOCAllence</title>
   </head>
   <body>
     <div id="root"></div>
